# Snake-Game

./: .gitignore  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md  main.cpp
hooks/: README.md  pre-commit
inc/: ai.hpp  frame.hpp  game.hpp  geo.hpp  ui.hpp
scripts/: format.sh
src/: ai.cpp  frame.cpp  game.cpp  geo.cpp  ui.cpp
